# blog_using_python_django_docker_postgres_poetry_flake8_tests_and_bootstrap

./: .flake8  README.md  pyproject.toml
appbase/: urls.py
appbase/static/css/: styles.css
appbase/templates/: base.html  footer.html  header.html  home.html
blog/: settings.py  urls.py
postblog/: form.py  models.py  serializers.py  tests.py  urls.py  views.py
postblog/migrations/: 0001_initial.py
postblog/templates/: list_all_posts.html
